prodMetadata/src/objects/Event_Attendee__c.object
<CustomObject>
    <fields>
        <fullName>Attendee_Role__c</fullName>
        <label>Attendee Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IAVA Representative</fullName>
                </value>
                <value>
                    <fullName>Contact Made at event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attendee__c</fullName>
        <label>Attendee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>DC Event Attendees</relationshipLabel>
        <relationshipName>DC_Event_Attendees</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DC_Event__c</fullName>
        <label>DC Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipName>Event_Attendees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <label>DC Event Attendee</label>
    <nameField>
        <displayFormat>EA-{000}</displayFormat>
        <label>Event Attendee ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DC Event Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>